--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-<h1>Hello! if you are seeing this then it is successful</h1>
-<h2> if you are now seeing this, then you successfully updated yout file </h2>  
+<h1>Hello! if you are seeing this then it is successful<h1>
+<h2> if you are now seeing this, then you successfully updated yout file <h2>  
